2010-12-15  Yong Li  <yoli@rim.com>

        Reviewed by Darin Adler.

        UTF-16 and its variants should be treated as Big Endian when BOM
        is absent.
        https://bugs.webkit.org/show_bug.cgi?id=51035

        Test: fast/encoding/char-decoding.html (changed)

        * platform/text/TextCodecUTF16.cpp:
        (WebCore::TextCodecUTF16::registerEncodingNames):

2010-12-15  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Chris Marrin.

        Percentage Z values in 3d transform functions and transform-origin should cause the property to be invalid
        https://bugs.webkit.org/show_bug.cgi?id=51070
        
        Treat as inavlid -webkit-transform values that include a percentage value in translateZ()
        or in the third parameter to translate3d().

        Test: transforms/3d/general/3dtransform-values.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseTransform):
        (WebCore::CSSParser::parseTransformOrigin): Whitespace change.

2010-12-15  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Chris Marrin.

        Reflection does not render properly when -webkit-transform is toggled, untoggled, and retoggled
        https://bugs.webkit.org/show_bug.cgi?id=50967
        
        If a reflection on a compositied, transformed element is toggled on, off and on,
        then we pick up a cached layer clone that has the wrong transform set on it.
        
        The fix is to reset those properties on the layer clones that get changed
        when the GraphicsLayer gains a structural layer (for reflection flattening).

        Test: compositing/reflections/remove-add-reflection.html

        * platform/graphics/ca/GraphicsLayerCA.cpp:
        (WebCore::GraphicsLayerCA::ensureStructuralLayer):

2010-12-15  Helder Correia  <helder@sencha.com>

        Reviewed by Ariya Hidayat.

        [Qt] Canvas shadow offset should not be affected by any transformation