@@ -1,3 +1,15 @@
+2010-12-15  Andreas Kling  <andreas.kling@nokia.com>
+
+        Reviewed by Ariya Hidayat.
+
+        [Qt] StillImage::draw() shouldn't call setCompositionMode() unless the QPaintEngine has Porter-Duff composition
+        https://bugs.webkit.org/show_bug.cgi?id=49918
+
+        Go through GraphicsContext::setCompositeOperation() which does the check for us.
+
+        * platform/graphics/qt/StillImageQt.cpp:
+        (WebCore::StillImage::draw):
+
 2010-12-15  Yong Li  <yoli@rim.com>
 
         Reviewed by Darin Adler.
